--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  <title>Advance Communication</title>
+  <head> 
+      <title>Advance Communication</title>
+      <link href="css/main.css" rel="stylesheet"/>
+    <script src="js/main.js"></script>
   </head>
   <body>
-    <div>
-      <h1 style="align: center;">Advance Communication</h1>
-      
+    <div class="root">
+      <div class="home">
+        <h1>Advance Communication</h1>
+        <p><b>Website under Construction</b><p>
+      </div>
     </div>
   </body>
 </html>
