--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head> 
+  <head>
+      <link rel="shortcut icon" href="static/favicon.ico"/>
       <title>Advance Communication</title>
       <link href="css/main.css" rel="stylesheet"/>
     <script src="js/main.js"></script>
@@ -8,8 +9,10 @@
   <body>
     <div class="root">
       <div class="home">
-        <h1>Advance Communication</h1>
-        <p><b>Website under Construction</b><p>
+          <center>
+          <h1>Advance Communication</h1>
+          <p><b>Website under Construction</b><p>
+          </center>
       </div>
     </div>
   </body>
