--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
   <head>
       <link rel="shortcut icon" href="static/favicon.ico"/>
+	  
       <title>Advance Communication</title>
       <link href="css/main.css" rel="stylesheet"/>
     <script src="js/main.js"></script>
   </head>
   <body>
-    <div class="root">
-      <div class="home">
-          <center>
-          <h1>Advance Communication</h1>
-          <p><b>Website under Construction</b><p>
-          </center>
-      </div>
-    </div>
+	<div class="nav-content">
+		<div class="nav-contener">
+			<ul>
+				<li>Home</li>
+				<li>About</li>
+				<li>Services</li>
+				<li>Blogs</li>
+				<li>Contact Us</li>
+			</ul>	
+		</div>		
+	</div>			
+	
   </body>
 </html>
