--- a/index.html
+++ b/index.html
@@ -1,24 +1,184 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <link rel="shortcut icon" href="static/favicon.ico"/>
-	  
-      <title>Advance Communication</title>
-      <link href="css/main.css" rel="stylesheet"/>
-    <script src="js/main.js"></script>
+    <link rel="shortcut icon" href="static/favicon.ico" />
+
+    <title>Advance Communication</title>
+    <!--Add bootstrap 5 here-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <!--Add bootstrap 5 ends here-->
+    <!---Add font awesome 3 here-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    <!--Add font awesome ends here-->
+
+    <link href="css/main.css" rel="stylesheet" />
   </head>
   <body>
-	<div class="nav-content">
-		<div class="nav-contener">
-			<ul>
-				<li>Home</li>
-				<li>About</li>
-				<li>Services</li>
-				<li>Blogs</li>
-				<li>Contact Us</li>
-			</ul>	
-		</div>		
-	</div>			
-	
+    <!-- create a cool navbar using bootstrap -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">Advance Communication</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
+      </div>
+    </nav>
+    <!-- navbar ends here -->
+    <!-- main content starts here -->
+    <div class="container">
+      <!--Add hero section here-->
+      <!-- jumbotron without bg color -->
+      <div class="jumbotron">
+        <h1 class="display-4">Welcome to Advance Communication</h1>
+        <p class="lead">
+          <!-- write creative about this organization -->
+          We are a group of developers who are passionate about software development.
+
+        </p>
+        <hr class="my-4" />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+          euismod, nisl eget consectetur sagittis, nisl nunc aliquet
+          tortor, eget tincidunt nisl nunc euismod.
+        </p>
+      </div>
+      <!-- jumbotron ends here -->
+      <!-- hero section ends here -->
+      <!--Add about section here-->
+      <div class="row">
+        <div class="col-md-6">
+          <h2>About Us</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            euismod, nisl eget consectetur sagittis, nisl nunc aliquet
+            tortor, eget tincidunt nisl nunc euismod.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            euismod, nisl eget consectetur sagittis, nisl nunc aliquet
+            tortor, eget tincidunt nisl nunc euismod.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="static/about-us.png" alt="about" width="500em" />
+        </div>
+      </div>
+      <!-- about section ends here -->
+      <!--Add contact section here-->
+      <div class="row">
+        <div class="col-md-6">
+          <img src="static/contact-us.png" alt="contact" width="500em" />
+        </div>
+        <div class="col-md-6">
+          <h2>Contact Us</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            euismod, nisl eget consectetur sagittis, nisl nunc aliquet
+            tortor, eget tincidunt nisl nunc euismod.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            euismod, nisl eget consectetur sagittis, nisl nunc aliquet
+            tortor, eget tincidunt nisl nunc euismod.
+          </p>
+        </div>
+      </div>
+      <!-- contact section ends here -->
+    <!-- main content ends here -->
+    <br/>
+    <hr/>
+    <!-- footer starts here -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h4>Copyright</h4>
+            <p>
+              &copy; Advance Communication 2021. <br/>
+              All rights reserved.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h4>Follow Us</h4>
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <a href="https://github.com/advance-communication">
+                  <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fa fa-facebook-square fa-2x"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fa fa-twitter-square fa-2x"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer ends here -->
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- import scripts here -->
+    <script src="js/main.js"></script>
   </body>
 </html>
